[package]
name = "gust-gen"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
chrono = { version = "0.4.15", features = ["serde"] }
paw = "1.0.0"
structopt = { version = "0.3.17", features = ["paw"] }
anyhow = "1.0.32"
serde_yaml = "0.8.13"
git2 = "0.13.11"
pathdiff = "0.2.0"
fs_extra = "1.2.0"
